# AI-and-Computer-Vision-Algorithm-Optimisation

./: CMakeLists.txt  README.md  main.cpp
YOLOV8+Libtorch/: CMakeLists.txt  main.cpp
YOLOV8+TensorRT/: CMakeLists.txt  main.cpp
